2013-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptFind): 64-bit application should
	not search for Ghostscript in 32-bit registry.  SourceForge bug
	#243 "GM on Windows will find Ghostscript only if both are 32 bit"

2013-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c: As an extension to the standard PNM and PAM
	formats, support writing 32-bit sample depth in the Q32 build, and
	supporting reading 32-bit sample depth in all builds.

2013-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c: Allow reading signed integer TIFF files even
	though internal storage uses signed integers.  Negative values
	will be handled incorrectly and positive values will be scaled to
	only 1/2 of the available unsigned range.  Perhaps the situation
	will improve in the future.

	* tests/rwfile_miff.tap: Test MIFF with specific depths.

	* tests/rwblob.c: Add support for -quality option.

	* tests/rwfile.c: Add support for -quality option.

	* tests/rwfile.tap: Add tests for PGM and PPM ASCII subformats.

	* coders/pnm.c (WritePNMImage): PGM "P2" format writer was broken
	at 8-bit depth due to lack of white-space between the output
	values.  Fixed now.

2013-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fixes to be able to read MIFF
	written by ImageMagick 6.X, including DirectClass grayscale
	images.  Interoperabilty is not completely assured since
	ImageMagick is not consistent with itself and may only be able to
	read the file it just wrote.  Reading DirectClass grayscale RLE
	compressed images is not supported yet.

2013-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Only delete the CMS
	transform if it is non-null.  If lcms returned a null transform,
	an assertion was thrown in lcms when the pointer was freed.
	Problem was reported by James Bardin.
