@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020131006"
-#define public MagickPackageReleaseDate "snapshot-20131006"
+#define public MagickPackageVersionAddendum ".020131008"
+#define public MagickPackageReleaseDate "snapshot-20131008"
